--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   height: 40vmin;
   pointer-events: none;
 }
+body{
+  background-image: url("https://img.freepik.com/premium-photo/map-with-white-grey_179286-106.jpg?w=740");
+  background-size: cover;
+  background-position:unset;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
